--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,3 +2,6 @@
 @import "global.scss";
 @import "variables.scss";
 @import "fonts.scss";
+@import "blocks/page-body.scss";
+@import "blocks/page-header.scss";
+@import "blocks/main-nav.scss";
