--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -5,4 +5,5 @@ $footer-items-color: #ffffff;
 
 $mobile-breakpoint: 767px;
 $tablet-breakpoint: 1023px;
-$desktop-breakpoint: 1024px;
+$min-desktop-breakpoint: 1024px;
+$desktop-breakpoint: 1190px;
