--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -33,14 +33,21 @@
   @media (max-width: $tablet-breakpoint) {
     display: block;
     z-index: 2;
-    padding-top: 120px;
-    padding-left: 50px;
+    padding-top: 136px;
+    padding-left: 45px;
+    padding-right: 45px;
+  }
+
+  @media (max-width: $mobile-breakpoint) {
+    padding-top: 101px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 
 .main-nav__search input {
   border: 1px solid transparent;
-  font-family: Poppins;
+  font-family: $main-text-font;
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
@@ -54,8 +61,8 @@
   }
 
   @media (max-width: $tablet-breakpoint) {
-    width: 678px;
-    max-width: 100%;
+    height: 40px;
+    width: 100%;
     border-radius: 21px;
     background-color: #b58f7a;
 
@@ -81,9 +88,14 @@
 .main-nav--open .main-nav__search svg,
 .main-nav--nojs .main-nav__search svg {
   @media (max-width: $tablet-breakpoint) {
-    top: 126px;
-    left: 65px;
+    top: 149px;
+    left: 58px;
     fill: #ffffff;
+  }
+
+  @media (max-width: $mobile-breakpoint) {
+    top: 115px;
+    left: 28px;
   }
 }
 
@@ -101,6 +113,10 @@
   &:active {
     opacity: 1;
   }
+
+  @media (max-width: $mobile-breakpoint) {
+    top: 20px;
+  }
 }
 
 .main-nav--open .main-nav__logo,
@@ -110,18 +126,26 @@
 
 .main-nav__logo svg {
   fill: #a87b62;
+
+  @media (max-width: $mobile-breakpoint) {
+    width: 52px;
+    height: 52px;
+  }
 }
 
 .main-nav--open .main-nav__logo svg,
 .main-nav--nojs .main-nav__logo svg {
-  fill: #ffffff;
-}
+  @media (max-width: $tablet-breakpoint) {
+    fill: #ffffff;
 
-.main-nav__logo-desk {
-}
+    &:hover {
+      fill: #1d1613;
+    }
 
-.main-nav__logo-mobile {
-  display: none;
+    &:active {
+      fill: #ffffff;
+    }
+  }
 }
 
 .main-nav__list li {
@@ -160,8 +184,13 @@
     width: 100%;
     min-height: 100vh;
     background-color: #a87b62;
-    padding-top: 100px;
-    padding-left: 100px;
+    padding-top: 152px;
+    padding-left: 35px;
+  }
+
+  @media (max-width: $mobile-breakpoint) {
+    padding-top: 109px;
+    padding-left: 5px;
   }
 }
 
@@ -185,7 +214,7 @@
 .main-nav--open .main-nav__list-items li,
 .main-nav--nojs .main-nav__list-items li {
   @media (max-width: $tablet-breakpoint) {
-    margin-bottom: 50px;
+    margin-bottom: 21px;
   }
 }
 
@@ -208,6 +237,15 @@
 
 .main-nav__list-items-burger {
   display: none;
+
+  @media (max-width: $tablet-breakpoint) {
+    padding-top: 20px;
+    padding-left: 10px;
+  }
+
+  @media (max-width: $mobile-breakpoint) {
+    padding-top: 9px;
+  }
 }
 
 .main-nav__list-items-burger a {
@@ -234,6 +272,7 @@
 
 .main-nav--open .main-nav__list-items-burger {
   display: none;
+
   @media (max-width: $tablet-breakpoint) {
     display: block;
 
@@ -286,8 +325,9 @@
 .main-nav--nojs .main-nav__login {
   @media (max-width: $tablet-breakpoint) {
     position: static;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 25px;
+    padding-bottom: 75px;
+    padding-left: 10px;
     font-size: 18px;
     line-height: 130%;
     color: #ffffff;
@@ -300,6 +340,10 @@
       color: #ffffff;
     }
   }
+
+  @media (max-width: $mobile-breakpoint) {
+    padding-top: 15px;
+  }
 }
 
 .main-nav__cart {
@@ -308,13 +352,18 @@
   right: 1px;
 
   @media (max-width: $tablet-breakpoint) {
-    top: 20px;
-    right: 40px;
+    top: 54px;
+    right: 27px;
     z-index: 3;
 
     span {
       display: none;
     }
+  }
+
+  @media (max-width: $mobile-breakpoint) {
+    top: 37px;
+    right: 15px;
   }
 }
 
@@ -356,8 +405,8 @@
 
   @media (max-width: $tablet-breakpoint) {
     position: absolute;
-    top: 15px;
-    left: 15px;
+    top: 54px;
+    left: 45px;
     z-index: 3;
     display: block;
     width: 25px;
@@ -365,6 +414,11 @@
     background-color: transparent;
     cursor: pointer;
     border: 0;
+  }
+
+  @media (max-width: $mobile-breakpoint) {
+    top: 37px;
+    left: 15px;
   }
 }
 
@@ -444,7 +498,7 @@
     padding: 0;
     width: 100%;
     background-color: #a87b62;
-    padding-top: 100px;
-    padding-left: 100px;
+    padding-top: 153px;
+    padding-left: 35px;
   }
 }
