--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -18,6 +18,24 @@
 
 @font-face {
   font-family: "Cormorant Garamond";
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+  src: url("../fonts/CormorantGaramond-Medium.woff2") format("woff2"),
+    url("../fonts/CormorantGaramond-Medium.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Cormorant Garamond";
+  font-weight: 500;
+  font-style: italic;
+  font-display: swap;
+  src: url("../fonts/CormorantGaramond-MediumItalic.woff2") format("woff2"),
+    url("../fonts/CormorantGaramond-MediumItalic.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Cormorant Garamond";
   font-weight: 700;
   font-style: normal;
   font-display: swap;
