--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,6 +1,6 @@
-$main-header-font: "Cormorant Garamond", "Georgia" serif;
+$main-header-font: "Cormorant Garamond", "Georgia", serif;
 $main-text-font: "Poppins", "Verdana", sans-serif;
-$main-text-color:  #1D1613;
+$main-text-color:  #1d1613;
 $footer-items-color: #ffffff;
 
 $mobile-breakpoint: 767px;
