--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,3 +6,5 @@
 @import "blocks/page-header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/promo.scss";
+@import "blocks/page-footer.scss";
+@import "blocks/footer.scss";
