--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,5 @@
+@import "swiper-vars.scss";
+@import "swiper-bundle.css";
 @import "normalize.scss";
 @import "global.scss";
 @import "variables.scss";
@@ -6,5 +8,7 @@
 @import "blocks/page-header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/promo.scss";
+@import "blocks/shop.scss";
+@import "blocks/slider-swiper.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/footer.scss";
