--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,5 +1,5 @@
 @import "swiper-vars.scss";
-@import "swiper-bundle.css";
+@import "swiper-bundle.scss";
 @import "normalize.scss";
 @import "global.scss";
 @import "variables.scss";
@@ -10,5 +10,6 @@
 @import "blocks/promo.scss";
 @import "blocks/shop.scss";
 @import "blocks/slider-swiper.scss";
+@import "blocks/blog.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/footer.scss";
