--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,5 +1,14 @@
 .promo {
   background-color: #a87b62;
+  margin-bottom: 120px;
+
+  @media (max-width: $tablet-breakpoint) {
+    margin-bottom: 70px;
+  }
+
+  @media (max-width: $mobile-breakpoint) {
+    margin-bottom: 59px;
+  }
 }
 
 .promo__main {
