--- a/source/sass/blocks/slider-swiper.scss
+++ b/source/sass/blocks/slider-swiper.scss
@@ -1,13 +1,39 @@
+.slider-swiper {
+  padding-bottom: 84px;
+
+  @media (max-width: $mobile-breakpoint) {
+    padding-bottom: 66px;
+  }
+}
+
 .swiper-container {
   width: 100%;
   height: 100%;
+  max-width: 1190px;
+  padding-left: 10px;
+  padding-right: 10px;
+
+  @media (min-width: $min-desktop-breakpoint) and (max-width: $desktop-breakpoint) {
+    max-width: 900px;
+  }
+
+  @media (max-width: $tablet-breakpoint) {
+    max-width: 678px;
+  }
+
+  @media (max-width: $mobile-breakpoint) {
+    max-width: 290px;
+  }
+
+  @media (min-width: 550px) and (max-width: $mobile-breakpoint) {
+    max-width: 520px;
+  }
 }
 
 .swiper-slide {
   text-align: center;
   font-size: 18px;
   background: #ffffff;
-
   display: flex;
   justify-content: center;
   align-items: center;
