--- a/source/sass/blocks/shop.scss
+++ b/source/sass/blocks/shop.scss
@@ -5,6 +5,10 @@
   @media (max-width: $tablet-breakpoint) {
     margin-bottom: 0;
   }
+
+  @media (max-width: $mobile-breakpoint) {
+    min-height: 455px;
+  }
 }
 
 .shop__slider-header {
@@ -197,7 +201,7 @@
   }
 
   @media (max-width: $mobile-breakpoint) {
-    padding-top: 0;
+    padding-top: 37px;
   }
 }
 
