--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,5 +11,8 @@
 @import "blocks/shop.scss";
 @import "blocks/slider-swiper.scss";
 @import "blocks/blog.scss";
+@import "blocks/faq.scss";
+@import "blocks/accordion.scss";
+@import "blocks/follow.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/footer.scss";
