--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -66,8 +66,10 @@
   font-size: 34px;
   line-height: 130%;
   letter-spacing: 0.02em;
+  color: #ffffff;
   margin: 0;
   padding-bottom: 10px;
+  text-align: left;
 
   @media (max-width: $mobile-breakpoint) {
     padding-right: 45px;
