--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -1,5 +1,13 @@
 .faq {
-  margin-bottom: 50px;
+  margin-bottom: 109px;
+
+  @media (max-width: $tablet-breakpoint) {
+    margin-bottom: 75px;
+  }
+
+  @media (max-width: $mobile-breakpoint) {
+    margin-bottom: 63px;
+  }
 }
 
 .faq__wrapper {
