--- a/source/sass/blocks/catalog-promo.scss
+++ b/source/sass/blocks/catalog-promo.scss
@@ -1,6 +1,6 @@
-.promo {
+.catalog-promo {
   background-color: #a87b62;
-  margin-bottom: 120px;
+  margin-bottom: 81px;
 
   @media (max-width: $tablet-breakpoint) {
     margin-bottom: 70px;
@@ -11,35 +11,37 @@
   }
 }
 
-.promo__main {
-  min-height: 463px;
-  background-image: url("../img/promo-main-img.jpg");
+.catalog-promo__wrapper {
+  min-height: 261px;
+  background-image: url("../img/promo-catalog-img.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 
   @media (min-resolution: 2dppx) {
-    background-image: url("../img/promo-main-img@2x.jpg");
+    background-image: url("../img/promo-catalog-img@2x.jpg");
   }
 
   @media (max-width: $tablet-breakpoint) {
-    background-image: url("../img/promo-main-img-tablet.jpg");
+    background-image: url("../img/promo-catalog-img-tablet.jpg");
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../img/promo-main-img-tablet@2x.jpg");
+      background-image: url("../img/promo-catalog-img-tablet@2x.jpg");
     }
   }
 
   @media (max-width: $mobile-breakpoint) {
-    background-image: url("../img/promo-main-img-mobile.jpg");
+    background-image: url("../img/promo-catalog-img-mobile.jpg");
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../img/promo-main-img-mobile@2x.jpg");
+      background-image: url("../img/promo-catalog-img-mobile@2x.jpg");
     }
   }
 }
 
-.promo h1 {
+
+
+.catalog-promo-header h1 {
   margin: 0;
   font-family: $main-header-font;
   font-style: normal;
@@ -49,36 +51,24 @@
   color: #ffffff;
   padding-left: 10px;
   padding-right: 10px;
-}
-
-.promo__main h1 {
-  font-size: 45px;
-  letter-spacing: 0.03em;
-  padding-top: 183px;
-
-  @media (max-width: $mobile-breakpoint) {
-    font-size: 38px;
-    padding-top: 187px;
-  }
-}
-
-.promo p {
-  margin: 0;
-  font-family: $main-header-font;
-  font-style: italic;
-  font-weight: normal;
-  text-align: center;
-  color: #ffffff;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.promo__main p {
-  font-size: 38px;
-  line-height: 130%;
-  padding-bottom: 20px;
+  font-size: 34px;
+  padding-top: 93px;
 
   @media (max-width: $mobile-breakpoint) {
     font-size: 34px;
   }
+}
+
+.catalog-promo-header p {
+  margin: 0;
+  font-family: $main-header-font;
+  font-style: italic;
+  text-align: center;
+  color: #ffffff;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-weight: 500;
+  font-size: 22px;
+  padding-top: 5px;
+  padding-bottom: 20px;
 }
