--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,5 +14,7 @@
 @import "blocks/faq.scss";
 @import "blocks/accordion.scss";
 @import "blocks/follow.scss";
+@import "blocks/catalog.scss";
+@import "blocks/catalog-promo.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/footer.scss";
