--- a/source/sass/blocks/catalog-promo.scss
+++ b/source/sass/blocks/catalog-promo.scss
@@ -3,11 +3,11 @@
   margin-bottom: 81px;
 
   @media (max-width: $tablet-breakpoint) {
-    margin-bottom: 70px;
+    margin-bottom: 50px;
   }
 
   @media (max-width: $mobile-breakpoint) {
-    margin-bottom: 59px;
+    margin-bottom: 38px;
   }
 }
 
@@ -39,8 +39,6 @@
   }
 }
 
-
-
 .catalog-promo-header h1 {
   margin: 0;
   font-family: $main-header-font;
@@ -56,6 +54,7 @@
 
   @media (max-width: $mobile-breakpoint) {
     font-size: 34px;
+    padding-top: 78px;
   }
 }
 
