--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,5 +16,7 @@
 @import "blocks/follow.scss";
 @import "blocks/catalog.scss";
 @import "blocks/catalog-promo.scss";
+@import "blocks/product-card.scss";
+@import "blocks/product-collection.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/footer.scss";
