страница продукта и модалка на логин

--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -9,6 +9,7 @@
 
   @media (max-width: $mobile-breakpoint) {
     margin-bottom: 61px;
+    margin-top: 0;
   }
 }
 
@@ -29,6 +30,11 @@
     grid-template-columns: 50% 50%;
     max-width: 100%;
   }
+
+  @media (max-width: $mobile-breakpoint) {
+    grid-template-columns: 100%;
+    padding: 0 14px;
+  }
 }
 
 .product-card__picture {
@@ -46,10 +52,22 @@
     column-gap: 14px;
     margin-left: 35px;
   }
+
+  @media (max-width: $mobile-breakpoint) {
+    position: relative;
+    margin-left: 0;
+    grid-template-columns: 100%;
+    grid-template-rows: 258px;
+    padding: 0;
+  }
 }
 
 .product-card__picture img {
   height: 100%;
+
+  @media (max-width: $mobile-breakpoint) {
+    height: 258px;
+  }
 }
 
 .product-card__picture-one,
@@ -61,6 +79,10 @@
   @media (max-width: $tablet-breakpoint) {
     width: 97px;
     height: 129px;
+  }
+
+  @media (max-width: $mobile-breakpoint) {
+    display: none;
   }
 }
 
@@ -108,16 +130,51 @@
     grid-row-start: 1;
     grid-row-end: 1;
   }
+
+  @media (max-width: $mobile-breakpoint) {
+    width: 100%;
+  }
+}
+
+.product-card__pagination {
+  display: none;
+
+  @media (max-width: $mobile-breakpoint) {
+    display: block;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 4px;
+  }
+}
+
+.product-card__pagination p {
+  font-family: $main-text-font;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 130%;
+  color: $main-text-color;
+  margin: 0;
 }
 
 .product-card__description {
   @media (max-width: $tablet-breakpoint) {
     margin-left: 20px;
   }
+
+  @media (max-width: $mobile-breakpoint) {
+    margin-left: 0;
+    margin-top: 41px;
+  }
 }
 
 .product-card__description-header {
   padding-bottom: 39px;
+
+  @media (max-width: $mobile-breakpoint) {
+    padding-bottom: 30px;
+  }
 }
 
 .product-card__description-header h2 {
@@ -155,11 +212,19 @@
   &:first-child {
     opacity: 0.5;
     margin-right: 34px;
+
+    @media (max-width: $mobile-breakpoint) {
+      margin-right: 39px;
+    }
   }
 }
 
 .product-card__description-about {
   padding-bottom: 48px;
+
+  @media (max-width: $mobile-breakpoint) {
+    padding-bottom: 38px;
+  }
 }
 
 .product-card__description-about table {
@@ -167,6 +232,10 @@
 
   @media (max-width: $tablet-breakpoint) {
     width: 319px;
+  }
+
+  @media (max-width: $mobile-breakpoint) {
+    width: 100%;
   }
 }
 
@@ -221,11 +290,20 @@
   @media (max-width: $tablet-breakpoint) {
     width: 319px;
   }
+
+  @media (max-width: $mobile-breakpoint) {
+    width: 290px;
+  }
 }
 
 .product-card__description-conditions {
   display: flex;
   padding-top: 17px;
+
+  @media (max-width: $mobile-breakpoint) {
+    padding-top: 12px;
+    padding-left: 15px;
+  }
 }
 
 .product-card__description-conditions p {
@@ -244,5 +322,9 @@
 
   @media (max-width: $tablet-breakpoint) {
     font-size: 12px;
+  }
+
+  @media (max-width: $mobile-breakpoint) {
+    padding-right: 50px;
   }
 }
