--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,3 +20,4 @@
 @import "blocks/product-collection.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/footer.scss";
+@import "blocks/modal-login.scss";
