--- a/source/sass/blocks/modal-login.scss
+++ b/source/sass/blocks/modal-login.scss
@@ -29,7 +29,7 @@
   top: 8%;
   padding: 0 40px;
   background-color: #f0eae4;
-  box-shadow: 0px 5px 32px rgba(226, 221, 215, 0.24);
+  box-shadow: 0 5px 32px rgba(226, 221, 215, 0.24);
 
   background-image: url("../img/login-img.jpg");
   background-repeat: no-repeat;
