--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,3 +21,4 @@
 @import "blocks/page-footer.scss";
 @import "blocks/footer.scss";
 @import "blocks/modal-login.scss";
+@import "blocks/modal-product.scss";
