--- a/source/sass/blocks/blog.scss
+++ b/source/sass/blocks/blog.scss
@@ -24,6 +24,10 @@
     max-width: 100%;
     padding: 0 45px;
   }
+
+  @media (max-width: $mobile-breakpoint) {
+    padding: 0;
+  }
 }
 
 .blog__header {
