--- a/source/sass/blocks/product-collection.scss
+++ b/source/sass/blocks/product-collection.scss
@@ -81,7 +81,7 @@
   }
 }
 
-.product-collection__slider-specification-name {
+.product-collection__slider-specification-name p {
   margin: 0;
   font-family: $main-text-font;
   font-style: normal;
@@ -97,7 +97,7 @@
   }
 }
 
-.product-collection__slider-specification-price {
+.product-collection__slider-specification-price p {
   margin: 0;
   font-family: $main-text-font;
   font-style: normal;
