--- a/source/sass/blocks/shop.scss
+++ b/source/sass/blocks/shop.scss
@@ -85,7 +85,7 @@
   }
 }
 
-.shop__slider-specification-name {
+.shop__slider-specification-name p {
   margin: 0;
   font-family: $main-text-font;
   font-style: normal;
@@ -101,7 +101,7 @@
   }
 }
 
-.shop__slider-specification-price {
+.shop__slider-specification-price p {
   margin: 0;
   font-family: $main-text-font;
   font-style: normal;
